--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier-plugin-tailwindcss": "^0.2.3",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-checker": "^0.6.0"
   }
 }
